apps/forgejo/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
spec:
  selector:
    app: forgejo
  type: NodePort
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 2222
      nodePort: 30022
